--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ input_videos_portrait/*
 output_videos/*
 thumbnails/*
 temp/*
-existing_video_names/*
+csv_data/*
 logs/*
 skipped_files.log
 completed_files.log
